# wunderscout_worker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/wunderscout_worker/: __init__.py  engine.py  main.py  modal.py  modal_app.py  package-lock.json  processor.py  torch.py  worker.py  yolo.py
src/wunderscout_worker/heatmap/: player17_histogram.json  player17_kde.json
src/wunderscout_worker/lib/: __init__.py  process_context.py  redis.py
