[project]
name = "wunderscout-worker"
version = "0.1.0"
description = "Worker that takes a video and runs ml models on it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.7",
    "aioboto3>=15.1.0",
    "aiofiles>=24.1.0",
    "numba>=0.57.0",
    "protobuf>=6.33.3",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "wunderscout==0.1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wunderscout_worker"]

[tool.deptry.package_module_name_map]
python-dotenv = ["dotenv"]

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]

[project.scripts]
worker = "wunderscout_worker:main"
